# TOP-26

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
lab1/bugs/: main.c
lab1/mol-dyn/: CMakeLists.txt
lab1/mol-dyn/include/moldyn/: avgvel.hpp  ekin.hpp  fcc.hpp  forces.hpp  init.hpp  maxwell.hpp  scale.hpp  update.hpp
lab1/mol-dyn/include/prng/: prng.h
lab1/mol-dyn/src/moldyn/: CMakeLists.txt  avgvel.cpp  ekin.cpp  fcc.cpp  forces.cpp  init.cpp  maxwell.cpp  scale.cpp  update.cpp
lab1/mol-dyn/src/prng/: CMakeLists.txt  prng.c
lab1/saxpy/: main.c
lab1/stream/: CMakeLists.txt  main.py  pyproject.toml
lab1/stream/include/stream/: CMakeLists.txt  stream.hpp
lab1/vector/: CMakeLists.txt
lab1/vector/include/vector/: vector.hpp
lab1/vector/src/: CMakeLists.txt  main.cpp
lab2/branch-predict/: CMakeLists.txt  branch_predict.cpp
lab3/false-sharing/: CMakeLists.txt
lab3/false-sharing/src/: CMakeLists.txt  main.cpp
lab3/integer-scan/: CMakeLists.txt
lab3/integer-scan/src/: CMakeLists.txt  cycle.h  main.cpp
project/cmake/: tpl.hpp.in
